# GeometryExampleOOP

./: CMakeLists.txt  README.md
include/: IGeometry.h  IPublic.h
src/: Circle.cpp  ConsoleTestDraw.cpp  DummyDrawer.cpp  DummyDrawer.h  Geometry.cpp  Geometry.h  Rectangle.cpp  Square.cpp  Triangle.cpp
